--- a/frontend/app/views/directives/userFiltersHandlerDirective.html
+++ b/frontend/app/views/directives/userFiltersHandlerDirective.html
@@ -6,7 +6,7 @@
       </label>
       <select ng-model='filterParams.role' class="uk-select uk-form-blank uk-width-expand">
         <option value="">{{'ANY'| translate }}</option>
-        <option ng-repeat="option in supportedValues['role']" ng-value="option">{{option}}</option>
+        <option ng-repeat="option in supportedValues['role']" ng-value="option">{{getRole(option) | translate}}</option>
       </select>
     </div>
     <div class="uk-width-1-2 uk-flex uk-flex-wrap uk-flex-baseline">
@@ -14,7 +14,7 @@
         {{'SEARCH_ORDER_BY' | translate}}
       </label>
       <select ng-model='filterParams.orderBy' class="uk-select uk-form-blank uk-width-expand">
-        <option ng-repeat="option in supportedValues['orderBy']" ng-value="option">{{option}}</option>
+        <option ng-repeat="option in supportedValues['orderBy']" ng-value="option">{{getOrder(option) | translate}}</option>
       </select>
     </div>
   </div>
