Added bookmarked, changed selects styles and some other visual changes

--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -30,6 +30,7 @@
 @import "uikit/_search.scss";
 @import "uikit/_tab.scss";
 @import "uikit/_text.scss";
+@import "uikit/_blank.scss";
 
 @import 'uikit/src/scss/uikit.scss';
 
