--- a/frontend/app/views/directives/tabDisplayDirective.html
+++ b/frontend/app/views/directives/tabDisplayDirective.html
@@ -1,4 +1,4 @@
-<div class="uk-margin-medium-top">
+<div class="uk-margin-small-top">
   <ul class="uk-child-width-expand uk-text-uppercase uk-tab">
     <li ng-repeat="tab in tabs" class="{{tabSelected == tab.value ? 'uk-active' : ''}}">
       <a ng-click="changeType(tab.value)">{{ tab.message | translate }} </a>
