Misc changes. API url, restangular selfLink and grunt task

--- a/frontend/app/views/post/PostViewController.html
+++ b/frontend/app/views/post/PostViewController.html
@@ -1,4 +1,4 @@
-<main ng-if="post">
+<main ng-if="post" class="uk-container-small">
   <h1>{{post.title}}</h1>
   <p>POST BY: {{post.user.username}}</p>
   <article>
