--- a/frontend/app/views/directives/commentDisplayDirective.html
+++ b/frontend/app/views/directives/commentDisplayDirective.html
@@ -1,17 +1,26 @@
 <div>
   <div style="border: 2px solid black;">
     <p>ID: {{comment.id}} - {{comment.user.username}}</p>
-    <p>{{comment.body}}</p>
+
+    <editable-comment-body-directive is-owner="comment.isOwner" body="comment.body" send-update-fn="callbackFunctions.edit"></editable-comment-body-directive>
+
     <button ng-click="writtingReply.value = true">REPLY</button>
-    <comment-like-handler-directive user-vote="comment.userVote" send-vote-fn="sendVote"></comment-like-handler-directive>
+
+    <comment-like-handler-directive user-vote="comment.userVote" send-vote-fn="callbackFunctions.vote"></comment-like-handler-directive>
 
     <div ng-if="writtingReply.value">
       <button ng-click="writtingReply.value = false">HIDE REPLY</button>
-      <comment-reply-directive parent-id="{{comment.id}}" send-comment-fn="sendComment.fn"></comment-reply-directive>
+      <comment-reply-directive parent-id="{{comment.id}}" send-comment-fn="callbackFunctions.reply"></comment-reply-directive>
     </div>
 
   </div>
-  <div ng-if="hasChildren()">
-    <comment-tree-directive comments="comment.children"></comment-tree-directive>
+
+  <div ng-if="hasChildren()" ng-init="s">
+
+    <button ng-if="!showChildren.value" ng-click="showChildren.value = true">SHOW CHILDREN</button>
+    <div ng-if="showChildren.value">
+      <comment-tree-directive comments="comment.children"></comment-tree-directive>
+    </div>
   </div>
+
 </div>
