--- a/frontend/app/styles/uikit/_button.scss
+++ b/frontend/app/styles/uikit/_button.scss
@@ -17,7 +17,10 @@ $button-default-background:                 transparent;
 $button-default-hover-background:           $button-default-background;
 $button-default-active-background:          $button-default-background;
 $button-default-hover-color:                $moovify-primary-color-dark;
-$button-default-active-background:          $moovify-primary-color-dark;
+$button-default-color:                      $moovify-primary-color-light;
+$button-default-hover-color:                $moovify-primary-color-dark;
+$button-default-active-color:               $moovify-primary-color-dark;
+
 // $button-line-height:                             $global-control-height - ($button-border-width * 2) !default;
 // $button-small-line-height:                       $global-control-small-height - ($button-border-width * 2) !default;
 // $button-large-line-height:                       $global-control-large-height - ($button-border-width * 2) !default;
