--- a/frontend/app/views/directives/comments/editableCommentBodyDirective.html
+++ b/frontend/app/views/directives/comments/editableCommentBodyDirective.html
@@ -1,6 +1,6 @@
 <div>
   <p ng-show="!editing.value">{{body}}</p>
-  <div ng-if="isOwner">
+  <div ng-if="isEditable">
     <button ng-click="editing.value = true">EDIT</button>
     <form ng-if="editing.value" name="editForm">
       <button ng-click="editing.value = false">HIDE EDIT</button>
