--- a/frontend/app/views/directives/fetch/fetchUsersDirective.html
+++ b/frontend/app/views/directives/fetch/fetchUsersDirective.html
@@ -1,4 +1,7 @@
 <div>
+  <div ng-show="users.length === 0" class="uk-margin-small-top">
+    <h1 class="uk-text-meta uk-text-center uk-text-bold">{{'USERS_NOT_FOUND' | translate}}</h1>
+  </div>
   <div ng-show="users.length > 0">
     <div ng-repeat="user in users">
       <user-list-entry-directive user="user"></user-list-entry-directive>
