Added entities to profile. Lacks presentation layer

--- a/frontend/app/views/directives/listEntries/commentListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/commentListEntryDirective.html
@@ -12,8 +12,8 @@
           <span ng-if="!comment.user.enabled">
             {{'COMMENT_BY_REMOVED' | translate }}
           </span>
-          {{'COMMENT_META' | translate:{title:comment.post.title, votes:comment.totalLikes};}}
-          <span uk-icon="icon: {{comment.totalLikes >= 0 ? 'chevron-up' : 'chevron-down'}}; ratio: 0.8"></span>
+          {{'COMMENT_META' | translate:{title:comment.post.title, votes:comment.totalVotes};}}
+          <span uk-icon="icon: {{comment.totalVotes >= 0 ? 'chevron-up' : 'chevron-down'}}; ratio: 0.8"></span>
         </p>
       </div>
       <div class="uk-width-auto">
