--- a/frontend/app/views/user/userProfile.html
+++ b/frontend/app/views/user/userProfile.html
@@ -53,7 +53,32 @@
         </a>
       </div>
       <div class="uk-width-2-3">
-        <tab-display-directive tab-selected="selectedTab.value" tabs="tabs"></tab-display-directive>
+        <tab-display-directive tab-selected="showing.value" tabs="tabs"></tab-display-directive>
+
+        <div class="uk-width-expand uk-margin-small-top">
+
+          <!--    User Posts    -->
+          <div ng-show="showing.value === 'posts'">
+            <fetch-posts-directive default-page-size="25" order="'newest'" enabled="true" path="/user/posts" refresh-url-fn="setPostsUrl" ></fetch-posts-directive>
+          </div>
+
+          <!--    User Comments    -->
+          <div ng-show="showing.value === 'comments'">
+            <fetch-comments-directive default-page-size="25" order="'newest'" enabled="true" path="/user/comments" refresh-url-fn="setCommentsUrl" ></fetch-comments-directive>
+          </div>
+
+          <!--    User Bookmarked Posts    -->
+          <div ng-show="showing.value === 'bookmarks'">
+            <fetch-posts-directive default-page-size="25" order="'newest'" enabled="true" path="/user/bookmarked" refresh-url-fn="setBookmarksUrl" ></fetch-posts-directive>
+          </div>
+
+          <!--    Users Following      -->
+          <div ng-show="showing.value === 'following'">
+            <fetch-users-directive default-page-size="25" order="'votes'" enabled="true" path="/user/following" refresh-url-fn="setFollowingUrl" ></fetch-users-directive>
+          </div>
+
+        </div>
+
       </div>
     </div>
   </div>
